@@ -23,6 +23,7 @@ in the inside string. If the triple quotes are indented 4 spaces, then the text 
 spaces removed too.
 
 === New features
+* Added error messages concerning cucumber.yml. (#70 Ben Mabey)
 * Added Autotest support - work in progress... (Peter Jaros)
 * Added new --exclude option (Bryan Helkamp)
 * Added new --scenario option (Peter Jaros)
